<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="5"
    android:rowCount="11"
    android:padding="16dp">

    <TextView
        android:id="@+id/aes_128_caption"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/column_margin"
        android:layout_marginRight="@dimen/column_margin"
        android:text="@string/aes_128_cipher_caption"
        android:gravity="center"/>

    <TextView
        android:id="@+id/aes_256_caption"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/column_margin"
        android:layout_marginRight="@dimen/column_margin"
        android:text="@string/aes_256_cipher_caption"
        android:gravity="center"/>

    <TextView
        android:id="@+id/blowfish_128_caption"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/column_margin"
        android:layout_marginRight="@dimen/column_margin"
        android:text="@string/blowfish_128_cipher_caption"
        android:gravity="center"/>

    <TextView
        android:id="@+id/blowfish_256_caption"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/column_margin"
        android:layout_marginRight="@dimen/column_margin"
        android:text="@string/blowfish_128_cipher_caption"
        android:gravity="center"/>

    <TextView
        android:id="@+id/chacha20_caption"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/column_margin"
        android:layout_marginRight="@dimen/column_margin"
        android:text="@string/chacha20_cipher_caption"
        android:gravity="center"/>

    <!--  Ciphering small data  -->

    <TextView
        android:id="@+id/total_time_small_data_cipher_caption"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_marginTop="@dimen/row_margin"
        android:layout_columnSpan="5"
        android:text="@string/total_time_small_data_cipher_caption"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/aes_128_small_time_cipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/aes_256_small_time_cipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/blowfish_128_small_time_cipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/blowfish_256_small_time_cipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/chacha20_small_time_cipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <!--  Deciphering small data  -->

    <TextView
        android:id="@+id/total_time_small_data_decipher_caption"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:layout_columnSpan="5"
        android:text="@string/total_time_small_data_decipher_caption"
        android:gravity="center"/>

    <TextView
        android:id="@+id/aes_128_small_time_decipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/aes_256_small_time_decipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/blowfish_128_small_time_decipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/blowfish_256_small_time_decipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/chacha20_small_time_decipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <!--  Ciphering large data  -->

    <TextView
        android:id="@+id/total_time_large_data_cipher_caption"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:layout_columnSpan="5"
        android:text="@string/total_time_large_data_cipher_caption"
        android:gravity="center"/>

    <TextView
        android:id="@+id/aes_128_large_time_cipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/aes_256_large_time_cipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/blowfish_128_large_time_cipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/blowfish_256_large_time_cipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/chacha20_large_time_cipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <!--  Deciphering large data  -->

    <TextView
        android:id="@+id/total_time_large_data_decipher_caption"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:layout_columnSpan="5"
        android:text="@string/total_time_large_data_decipher_caption"
        android:gravity="center"/>

    <TextView
        android:id="@+id/aes_128_large_time_decipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/aes_256_large_time_decipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/blowfish_128_large_time_decipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/blowfish_256_large_time_decipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <TextView
        android:id="@+id/chacha20_large_time_decipher_result"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:text="@string/default_total_time_value"
        android:gravity="center"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row_margin"
        android:layout_columnSpan="5"
        android:text="@string/start_button_caption"/>

</GridLayout>